--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <td>8:42</td>
                 <td>IC</td>
                 <td>Szeged</td>
-                <td>Szatymaz-<br>Kistelek</td>
+                <td>Szatymaz-Kistelek</td>
                 <td>5</td>
             </tr>
             <tr>
@@ -38,7 +38,7 @@
                 <td></td>
                 <td>IC</td>
                 <td>Szegede</td>
-                <td>Szatymaz-<br>Kistelek</td>
+                <td>Szatymaz-Kistelek</td>
                 <td>4</td>
             </tr>           
             <tr>
@@ -53,8 +53,8 @@
                 <td>9:27</td>
                 <td></td>
                 <td>IC</td>
-                <td>Nyugati** <br>Budapest</td>
-                <td>Cegléd-<br>Kecskemét</td>
+                <td>Nyugati** Budapest</td>
+                <td>Cegléd-Kecskemét</td>
                 <td>5</td>
             </tr>            
             <tr>
