--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Máv utastájékoztató</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <table>
@@ -11,6 +12,7 @@
         <tr>
                 <th>Tervezett érkezés</th>
                 <th>Érkezés</th>
+                <th>Vonat</th>
                 <th>Honnan</th>
                 <th>Hova</th>
                 <th>Vágány</th>
@@ -37,7 +39,7 @@
                 <td>9:22</td>
                 <td></td>
                 <td>IC</td>
-                <td>Szegede</td>
+                <td>Szeged</td>
                 <td>Szatymaz-Kistelek</td>
                 <td>4</td>
             </tr>           
