--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <table>
         <thead>
+            <tr>
+                <th>8:43:03</th>
+                <th>MÁV induló járatok</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th><img src="mav-szarnyaskerek.png" alt="MÁV" height="100px" title="Máv-logó"></th>
+            </tr>
         <tr>
                 <th>Tervezett érkezés</th>
                 <th>Érkezés</th>
@@ -20,15 +28,15 @@
         </thead>
         <tbody>
             <tr>
-                <td>8:30</td>
-                <td>8:42</td>
+                <td class="elsooszlop">8:30</td>
+                <td id="keses">8:42</td>
                 <td>IC</td>
                 <td>Szeged</td>
                 <td>Szatymaz-Kistelek</td>
                 <td>5</td>
             </tr>
             <tr>
-                <td>9:22</td>
+                <td class="elsooszlop">9:22</td>
                 <td></td>
                 <td>SZ</td>
                 <td>Szentes</td>
@@ -36,7 +44,7 @@
                 <td>2</td>
             </tr>           
             <tr>
-                <td>9:22</td>
+                <td class="elsooszlop">9:22</td>
                 <td></td>
                 <td>IC</td>
                 <td>Szeged</td>
@@ -44,7 +52,7 @@
                 <td>4</td>
             </tr>           
             <tr>
-                <td>9:24</td>
+                <td class="elsooszlop">9:24</td>
                 <td></td>
                 <td>SZ</td>
                 <td>Lakitelek</td>
@@ -52,7 +60,7 @@
                 <td>1</td>
             </tr>            
             <tr>
-                <td>9:27</td>
+                <td class="elsooszlop">9:27</td>
                 <td></td>
                 <td>IC</td>
                 <td>Nyugati** Budapest</td>
@@ -60,7 +68,7 @@
                 <td>5</td>
             </tr>            
             <tr>
-                <td>9:30</td>
+                <td class="elsooszlop">9:30</td>
                 <td></td>
                 <td>IC</td>
                 <td>Szeged</td>
