--- a/indulovonatok.html
+++ b/indulovonatok.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Máv utastájékoztató</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="indulovonatok.css">
 </head>
 <body>
     <table>
         <thead>
+            <tr>
+                <th>08:43:10</th>
+                <th>Abfahrt</th>
+                <th colspan="2">Induló vonatok</th>
+                <th>Departures</th>
+                <th>Logó</th>
+            </tr>
             <tr>
                 <th>8:43:03</th>
                 <th>MÁV induló járatok</th>
@@ -29,7 +36,7 @@
         <tbody>
             <tr>
                 <td class="elsooszlop">8:30</td>
-                <td id="keses">8:42</td>
+                <td id="keso_indulo_vonat">8:42</td>
                 <td>IC</td>
                 <td>Szeged</td>
                 <td>Szatymaz-Kistelek</td>
@@ -78,6 +85,6 @@
 
         </tbody>
     </table>
-    <a href="indulovonatok.html">Induló vonatok</a>
+    <a href="index.html">Érkező vonatok</a>
 </body>
 </html>
